# ArpamGui

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_imgui.cmake  CMakePresets.json  README.md  arpam_gui.sln  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
ArpamGuiQt/: CMakeLists.txt  TODO.md  print_target_properties.cmake
ArpamGuiQt/resources/icons/: .gitignore  ArpamGui.icns  ArpamGui.rc  make_icons.sh
ArpamGuiQt/resources/styles/: styles.qss
ArpamGuiQt/src/: AScanPlot.cpp  AScanPlot.hpp  About.cpp  About.hpp  AcquisitionController.cpp  AcquisitionController.hpp  AlinePlot.cpp  AlinePlot.hpp  Canvas.cpp  Canvas.hpp  CanvasAnnotationItem.cpp  CanvasAnnotationItem.hpp  CanvasAnnotationModel.cpp  CanvasAnnotationModel.hpp  CanvasAnnotationView.cpp  CanvasAnnotationView.hpp  CanvasAnnotations.cpp  CanvasAnnotations.hpp  CanvasCursorState.hpp  CanvasOverlay.cpp  CanvasOverlay.hpp  CanvasTicks.cpp  CanvasTicks.hpp  CollapsibleGroupBox.hpp  Common.hpp  CoregDisplay.cpp  CoregDisplay.hpp  CustomPlot.cpp  CustomPlot.hpp  DataProcWorker.cpp  DataProcWorker.hpp  FrameController.cpp  FrameController.hpp  ImshowCanvas.cpp  ImshowCanvas.hpp  ImshowCanvasAnnotations.cpp  ImshowCanvasAnnotations.hpp  ImshowCanvasCursorState.hpp  ImshowCanvasTicks.cpp  ImshowCanvasTicks.hpp  (+24 more)
ArpamGuiQt/src/Annotation/: Annotation.cpp  Annotation.hpp  AnnotationJsonFile.cpp  AnnotationJsonFile.hpp  AnnotationModel.cpp  AnnotationModel.hpp  AnnotationModelColumnMeta.hpp  AnnotationView.cpp  AnnotationView.hpp  GraphicsItemBase.cpp  GraphicsItemBase.hpp  GraphicsItems.cpp  GraphicsItems.hpp
ArpamGuiQt/src/DAQ/: DAQ.cpp  DAQ.hpp
ArpamGuiQt/src/Metrics/: FWHM.hpp  FWHMTracer.hpp  FreqSpectrum.cpp  FreqSpectrum.hpp
ArpamGuiQt/src/Motor/: MotorNI.cpp  MotorNI.hpp  NI.cpp  NI.hpp  StepperDriver.cpp  StepperDriver.hpp
arpam_gui_glfw_opengl3/: arpam_gui.sln  arpam_gui.vcxproj  arpam_gui.vcxproj.filters  imgui.ini  main.cpp  main_gui.hpp  motor_control.cpp  motor_control.hpp
arpam_gui_glfw_vulkan/: CMakeLists.txt  imgui.ini  main.cpp  main_gui.cpp  main_gui.hpp  vulkan_texture_loader.cpp  vulkan_texture_loader.hpp
arpam_gui_glfw_vulkan/utils/: utils.cpp  utils.hpp
arpam_gui_qt/: CMakeLists.txt
arpam_gui_qt/resources/styles/: styles.qss
arpam_gui_qt/src/: About.hpp  CoregDisplay.cpp  DataProcWorker.cpp  DataProcWorker.hpp  DataProcessingThread.cpp  DataProcessingThread.hpp  FrameController.cpp  FrameController.hpp  ImshowCanvas.cpp  ImshowCanvas.hpp  MainWindow.cpp  MainWindow.hpp  ReconParamsController.cpp  ReconParamsController.hpp  geometryUtils.cpp  main.cpp
cli/: CMakeLists.txt  main.cpp
libarpam/: CMakeLists.txt  libarpam.cpp  libarpam.hpp
libarpam/include/libarpam/: fft.hpp  recon.hpp  signal.hpp
libarpam/src/libarpam/: fft.hpp  io.hpp  libarpam.cpp  libarpam.hpp  recon.cpp  recon.hpp  signal.cpp  signal.hpp
libarpam/test/: test_io.cpp  test_libarpam.cpp  test_recon.cpp  test_signal.cpp
libuspam/: CMakeLists.txt
libuspam/include/uspam/: MultiStageBuffer.hpp  SAFT.hpp  SystemParams.hpp  cudaRecon.h  cudaSignal.cuh  cudaSignal.h  cudaUtil.cuh  cudaUtil.h  defer.h  fft.hpp  filter.hpp  imutil.hpp  io.hpp  ioOldBin.hpp  ioParams.hpp  json.hpp  recon.hpp  reconParams.hpp  ringBuffer.hpp  signal.hpp  surface.hpp  timeit.hpp  uspam.hpp
libuspam/include/uspam/beamformer/: BeamformerParams.hpp  BeamformerType.hpp  SAFT.hpp  beamformer.hpp  common.hpp  surface.hpp
libuspam/include/uspam/simd/: simd.h
libuspam/src/: cudaRecon.cu  cudaSignal.cu  imutil.cpp  io.cpp  ioParams.cpp  json.cpp  recon.cpp  reconParams.cpp  signal.cpp
libuspam/src/beamformer/: SAFT.cpp
libuspam/test/: test_MultiStageBuffer.cpp  test_SAFT.cpp  test_cudaRecon.cu  test_cudaSignal.cu  test_imutil.cpp  test_io.cpp  test_recon.cpp  test_reconParams.cpp  test_signal.cpp  test_surface.cpp
ports/fftconv/: portfile.cmake  vcpkg.json
ports/kfr/: portfile.cmake  vcpkg.json
scripts/: ConvertBinfile.py  MakeRelease.ps1  build_mac.sh  experimentExported.py  macMakeRelease.sh  recon.py  saft.py  visualizeExport.py  winClMakeRelease.ps1  winClangCLMakeRelease.ps1  winMakeRelease.ps1
serial/lib/Debug/: serial.idb  serial.lib
serial/lib/Release/: serial.lib
triplets/: arm64-osx.cmake  x64-linux.cmake  x64-windows.cmake
